Updated and Refactored Dependencies
Update Material UI to the Newest version and refactored components to use new Material UI properties.

--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^1.1.0",
-    "@material-ui/icons": "^1.1.0",
+    "@material-ui/core": "4.7.1",
+    "@material-ui/icons": "4.5.1",
     "body-parser": "1.19.0",
-    "cookie-parser": "^1.4.3",
-    "dotenv": "^6.0.0",
-    "email-templates": "^4.0.1",
+    "cookie-parser": "1.4.4",
+    "dotenv": "8.2.0",
+    "email-templates": "6.0.4",
     "express": "4.17.1",
     "express-session": "1.17.0",
-    "handlebars": "^4.1.2",
+    "handlebars": "4.5.3",
     "helmet": "3.21.1",
-    "nodemailer": "^4.6.7",
-    "nodemon": "^1.17.5",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "nodemailer": "6.4.0",
+    "nodemon": "2.0.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "1.1.4",
